# Maddy_xlsx_to_ics

./: .gitignore  BAP_2023.xlsx  courses.ics  main.py  main_old.py  pyproject.toml  test.py  test.xlsx
handlers/: __init__.py  dateHandler.py  eventHandler.py  fileHandler.py  inputHandler.py  stringHandler.py
xlsx/: IVA_2022.xlsx
