[tool.poetry]
name = "xlsx-to-ics"
version = "0.1.0"
description = "Make an ics file for the courses in the xlsx file"
authors = ["Bert Vriens <bert.vriens@gmail.com>"]
readme = "README.md"
packages = [{include = "xlsx_to_ics"}]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.0.10"
icalendar = "^5.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
